# qualitative-feedback-analysis

./: .agentignore  .claudeignore  .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  api_keys.json.example  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/skills/design-advisor/: SKILL.md
.devcontainer/: .env.example  .gitignore  Dockerfile  README.md  claude-setup.json  devcontainer.json  docker-compose.yml  init-firewall.sh
.devcontainer/dotfiles/: .p10k.zsh  statusline-command.sh
.devcontainer/scripts/: fix-volume-ownership.sh  post-create.sh
.github/actions/stamp-deployed-version/: action.yml
.github/scripts/: is_latest_release.py
.github/workflows/: _deploy-release.yaml  _is-latest-release.yaml  auto-staging-on-publish.yaml  build-from-commit.yaml  ci.yaml  cicd.yaml  docs.yaml  promote-to-dev.yaml  promote-to-prd.yaml  promote-to-staging.yaml  publish.yaml  publish.yaml.deactivated  release.yaml  release.yaml.deactivated  terraform.yaml
alembic/: env.py
alembic/versions/: 20260429_01_create_llm_calls_table.py  20260511_01_add_auth_tables.py  20260519_01_add_call_id_to_llm_calls.py  61913ced1086_extend_llm_calls_with_operation_cost_.py  fbeeb04c3d36_create_llm_calls_table.py
changelog/: 2026-07-13.md
docs/: README.md  architecture-review-2026-05-08-addendum.md  architecture-review-2026-05-08.md  architecture.md  conf.py  index.md  ubiquitous_language.md
docs/_templates/autosummary/: module.rst
docs/adr/: 001-pydantic-domain-models.md  002-protocol-based-ports.md  003-fully-async-concurrency.md  004-single-llm-client.md  005-bearer-auth.md  006-composed-settings.md  007-separate-api-schemas.md  008-keep-orchestrator-port.md  009-dedicated-state-storage-rg.md  010-shared-container-registry.md  011-drop-orchestrator-port.md  012-postgres-mi-as-admin.md  013-keys-in-db-and-environment-vars.md  014-anonymization-helpers.md  014-embedding-port-and-self-hosted-model.md  015-hdbscan-clustering.md  016-guard-auto-deploy-on-publish.md  017-replace-mistral-medium-with-gpt.md  README.md  index.md
docs/adr/obsolete/: 008-keep-orchestrator-port.md
docs/api/: README.md
docs/architecture/: 01-architecture-style.md  02-system-context.md  03-components.md  04-crosscutting.md  05-data-model.md  06-prompt-envelope.md  07-hierarchical-analysis.md  README.md  index.md
docs/development/: README.md  graphify.md  implementing-a-new-endpoint.md  index.md
docs/integrations/: espo-crm.md
docs/migration/: 0.14.0-breaking-changes.md
docs/operations/: README.md  auth-management.md  bootstrap.md  check-deployed-versions.md  deployment.md  how-to.md  index.md  observability.md  release-flow.md  settings-reference.md  setup-new-env.md  tfstate-network-lockdown.md
docs/plans/: 117-free-text-analysis.md
docs/python-api/: README.md  index.md
docs/rest-api/: README.md  index.md
docs/specs/: 117-free-text-analysis.md  guard-auto-deploy-on-publish.md
docs/superpowers/plans/: 2026-04-28-cost-and-endpoint-usage-tracking-plan.md
docs/superpowers/specs/: 2026-04-28-cost-and-endpoint-usage-tracking-design.md
fixtures/: analyze_corpus.yaml  coding_framework.json  large_corpus.yaml
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  GRAPH_TREE.html  graph.html  graph.json  manifest.json
infra/: BOOTSTRAP.md  app_service.tf  bootstrap.sh  cicd.tf  container_registry.tf  imports.tf  key_vault.tf  locals.tf  lockdown-tfstate-network.sh  main.tf  observability.tf  outputs.tf  postgres.tf  providers.tf  resource_group.tf  setup-new-env.md  variables.tf  virtual_network.tf
notebooks/: analyze_corpus.ipynb  anonymizer_test.ipynb
scripts/: README.md  excel_to_coding_framework_json.py  fetch_embedding_model.py  generate_corpus.prompt.md  generate_corpus.py  multiple_lang_anonym.ipynb  plant_trends_in_corpus.py  show_deployed_versions.sh  stress_analyze.py  test-api.sh  test_pii_removal.ipynb  update_auth_api_keys.py
scripts/espo_crm/: set_codes_payload  set_summarize_aggregate_payload  set_summarize_aggregate_payload.php  set_summarize_per_item_payload  set_summarize_per_item_payload.php  translate_summarize_aggregate_reponse_to_ouput  translate_summarize_aggregate_reponse_to_ouput.php  translate_summarize_per_item_reponse_to_ouput  translate_summarize_per_item_reponse_to_ouput.php
scripts/espo_crm/feedback_trigger/: 1_set_feedback_record_string.php  2_set_codes_string.php  3_combine_mother_payload.php  4_1_assign_codes.php  4_2_summarize.php  (+3 more)
src/feedback-analysis-backend/: __init__.py  main.py  settings.py  utils.py
src/feedback_analysis_backend/: auth.py  main.py  settings.py  utils.py
src/qfa/: __init__.py  auth.py  main.py  settings.py  utils.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_analyze_corpus.py  test_auth.py  test_feedback-analysis-backend.py  test_feedback_analysis_backend.py  test_large_corpus.py  test_settings.py  test_utils.py
tests/adapters/: test_call_context.py  test_db.py  test_db_auth.py  test_embedding.py  test_env_auth.py  test_llm_client.py  test_presidio_anonymizer.py  test_tracking_llm.py
tests/api/: conftest.py  test_analyze_endpoint.py  test_auth_routes.py  test_composition.py  test_routes.py  test_schemas.py  test_usage_routes.py
tests/domain/: test_clustering_models.py  test_errors.py  test_models.py  test_ports.py  test_usage_models.py
tests/e2e/: conftest.py  test_embedding_validation.py  test_orchestrator_e2e.py  test_usage_e2e.py
tests/integration/: conftest.py  test_db_postgres.py  test_migrations.py  test_usage_repository.py
tests/scripts/: test_is_latest_release.py  test_stress_analyze.py
tests/services/: test_auth_orchestrator.py  test_call_context.py  test_clustering.py  test_coding_trends.py  test_hierarchical_prompts.py  test_llm_client.py  test_orchestrator.py  test_orchestrator_hierarchical.py  test_prompt_injection_fixtures.py  test_prompts.py  test_tracking_orchestrator.py  test_ubiquitous_language_prompts.py
(+59 files in other folders)
