[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualitative-feedback-analysis"
version = "0.11.0"
description = "The feedback analysis tool receives feedback items and analyses trends, topics and their evolution over time."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Marius Helf", email = "mhelf@rodekruis.nl" },
    { name = "Paul van Houtum", email = "pvanhoutum@rodekruis.nl" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastapi~=0.135.0",
    "gunicorn~=25.3",
    "litellm~=1.83.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "pyyaml~=6.0",
    "tenacity~=9.1",
    "uvicorn[standard]~=0.42.0",
]

[project.urls]
Homepage = "https://github.com/rodekruis/qualitative-feedback-analysis"
Repository = "https://github.com/rodekruis/qualitative-feedback-analysis"


[tool.hatch.build]
packages = ["src/qfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
lint.select = [
    "ANN", # flake8-annotations
    "E", # flake8
    "F", # flake8
    "I", # isort
    "D", # pydocstyle
    "S", # flake8-bandit
    "NPY", # numpy-specific rules
    "RUF", # ruff specific rules
]
lint.ignore = [
    "E501",
    "E712",
    "E731", # Do not assign a `lambda` expression, use a `def`
    "RUF013", # PEP 484 prohibits implicit `Optional`
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed

    # pydocstyle
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested class
    "D401", # First line of docstring should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S", "ANN", "D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.override"]

[tool.ty.src]
include = ["src"]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-method-override = "ignore"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
build_command = """
    pip install uv
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.branches.main]
match = "(master|main)"

[tool.semantic_release.branches.release]
match = "release/.*"

[tool.semantic_release.remote]
type = "github"

[dependency-groups]
dev = [
    "azure-identity~=1.25",
    "azure-keyvault-secrets~=4.10",
    "httpx~=0.28",
    "pytest~=9.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.15.1",
    # pin ruff to minor version, so we don't get unexpected new rules upon update
    "ruff~=0.15.0",
     # ty is under development and adds new rules frequently.
    # Use pinned version so we don't get unexpected lint errors when ty gets updated
    "ty==0.0.18",
]
