[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualitative-feedback-analysis"
version = "2.0.0"
description = "The feedback analysis tool receives feedback items and analyses trends, topics and their evolution over time."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Marius Helf", email = "mhelf@rodekruis.nl" },
    { name = "Paul van Houtum", email = "pvanhoutum@rodekruis.nl" },
    { name = "Cas Teeuwen", email = "cteeuwen@rodekruis.nl" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "alembic>=1.15",
    "asyncpg>=0.31.0",
    "azure-identity~=1.25",
    "sqlalchemy[asyncio]>=2.0",
    "fastapi~=0.135.0",
    "gunicorn~=25.3",
    "litellm~=1.84.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic~=2.0",
    "pydantic-settings~=2.14",
    "pyyaml~=6.0",
    "tenacity~=9.1",
    "uvicorn[standard]~=0.42.0",
    "en_core_web_sm",
    "fr_core_news_sm",
    "uk_core_news_sm",
    "ru_core_news_sm",
    "es_core_news_sm",
    "xx_ent_wiki_sm",
    "langdetect>=1.0.9",
    "hdbscan>=0.8.43",
    "numpy>=2.4.4",
    "onnxruntime>=1.26.0",
    "tokenizers>=0.22.2",
    "azure-monitor-opentelemetry>=1.8.8",
]

[tool.uv]
constraint-dependencies = [
    # Starlette vulnerability in starlette >= 0.8.3, < 1.0.1: https://x41-dsec.de/lab/advisories/x41-2026-002-starlette/
    # Floor bumped to track dependabot's latest release.
    "starlette>=1.3.1",
    # tornado (transitive via dev tooling, e.g. ipykernel); pin the floor at
    # dependabot's bumped release.
    "tornado>=6.5.7",
]

[tool.uv.sources] # include spacy models through custom-defined sources https://stackoverflow.com/a/79768491
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
fr-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_sm-3.8.0/fr_core_news_sm-3.8.0-py3-none-any.whl" }
uk-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/uk_core_news_sm-3.8.0/uk_core_news_sm-3.8.0-py3-none-any.whl" }
ru-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl" }
es_core_news_sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
xx-ent-wiki-sm = { url = "https://github.com/explosion/spacy-models/releases/download/xx_ent_wiki_sm-3.8.0/xx_ent_wiki_sm-3.8.0-py3-none-any.whl" }

[project.urls]
Homepage = "https://github.com/rodekruis/qualitative-feedback-analysis"
Repository = "https://github.com/rodekruis/qualitative-feedback-analysis"


[tool.hatch.build]
packages = ["src/qfa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a real Postgres instance (excluded by default)",
    "e2e: end-to-end test with respx-mocked LiteLLM (excluded by default)",
]
addopts = "-m 'not integration and not e2e'"
# Session-scoped loops so session-scoped async fixtures (pg_engine, app)
# and the function-scoped tests that consume them share one event loop.
# asyncpg connections are loop-bound; a mismatch surfaces as the misleading
# "another operation is in progress" error.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
lint.select = [
    "ANN", # flake8-annotations
    "E", # flake8
    "F", # flake8
    "I", # isort
    "D", # pydocstyle
    "S", # flake8-bandit
    "NPY", # numpy-specific rules
    "RUF", # ruff specific rules
]
lint.ignore = [
    "E501",
    "E712",
    "E731", # Do not assign a `lambda` expression, use a `def`
    "RUF013", # PEP 484 prohibits implicit `Optional`
    "ANN202", # Missing return type annotation for private function
    "ANN204", # Missing return type annotation for special function
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed

    # pydocstyle
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested class
    "D401", # First line of docstring should be in imperative mood
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S", "ANN", "D101", "D102", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = ["typing.override"]

[tool.ty.src]
include = ["src", "tests"]

#[[tool.ty.overrides]]
#include = ["tests/**"]

#[tool.ty.overrides.rules]
#invalid-method-override = "ignore"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
allow_zero_version = true
build_command = """
    pip install uv
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[tool.semantic_release.branches.main]
match = "(master|main)"

[tool.semantic_release.branches.release]
match = "release/.*"

[tool.semantic_release.remote]
type = "github"

[dependency-groups]
dev = [
    "aiosqlite~=0.20",
    "asgi-lifespan~=2.1",
    "azure-keyvault-secrets~=4.10",
    "httpx~=0.28",
    "huggingface-hub>=1.10",
    "import-linter>=2.11",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "polars>=1.41.1",
    "pre-commit>=4.6.0",
    "pytest~=9.0",
    "pytest-asyncio~=1.3.0",
    "pytest-mock~=3.15.1",
    # pin ruff to minor version, so we don't get unexpected new rules upon update
    "ruff~=0.15.0",
    # ty is under development and adds new rules frequently.
    # Use pinned version so we don't get unexpected lint errors when ty gets updated
    "ty~=0.0.34",
]
docs = [
    "sphinx>=7",
    "myst-parser>=2",
    "sphinxcontrib-mermaid>=0.9",
    "sphinx-autobuild>=2024.4",
    "pydata-sphinx-theme>=0.17.1",
]

[tool.importlinter]
root_packages = ["qfa"]
include_external_packages = true
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Enforce hexagonal layers"
type = "layers"
layers = [
    # Sibling layers at the outer ring: driving (api) and driven (adapters)
    # adapters must not import each other; they meet only via services + domain.
    "api | adapters",
    "services",
    "domain",
]
containers = [
    "qfa",
]
# The composition root spans two files: qfa.api.app owns infrastructure
# wiring (DB engine, usage tracking, auth lookup, LiteLLM construction)
# and qfa.api.composition owns the domain-object graph (orchestrator,
# anonymizer, embedder). Both legitimately instantiate driven adapters
# and inject them into the application service; this is the single
# allowed exception to the api / adapters sibling rule.
ignore_imports = [
    "qfa.api.app -> qfa.adapters.llm_client",
    "qfa.api.app -> qfa.adapters.tracking_llm",
    "qfa.api.app -> qfa.adapters.db",
    "qfa.api.app -> qfa.adapters.usage_repository",
    "qfa.api.app -> qfa.adapters.env_auth",
    "qfa.api.composition -> qfa.adapters.embedding",
    "qfa.api.composition -> qfa.adapters.presidio_anonymizer",
]

[[tool.importlinter.contracts]]
name = "Domain stays free of infrastructure"
type = "forbidden"
source_modules = [
    "qfa.domain",
]
forbidden_modules = [
    "openai",
    "litellm",
    "presidio_analyzer",
    "presidio_anonymizer",
    "fastapi",
    "starlette",
    "tenacity",
]

[[tool.importlinter.contracts]]
name = "Application services depend only on ports, not infrastructure"
type = "forbidden"
source_modules = [
    "qfa.services",
]
# TODO: tenacity is still imported in qfa.services.orchestrator for retry
# decoration. Once retry policy moves behind a port (or to a wrapper in
# qfa.adapters), drop "tenacity" from allow_indirect_imports below and
# add it to forbidden_modules above.
forbidden_modules = [
    "openai",
    "litellm",
    "presidio_analyzer",
    "presidio_anonymizer",
    "fastapi",
    "starlette",
]
